syntax = "proto3";

package lcs.srv;

import "lcs_common.proto";

message Session
{
    string                mid             = 1;
    ServerStatus          status    = 2;
    optional Channel      channel        = 3;
}

message Sessions
{
    repeated Session sessions       = 1;
}

message SessionResp
{
    enum ErrorCode
    {
        kOK    = 0; //stored successfully
        kError = 1; //
    }

    ErrorCode ec = 1;
}

