syntax = "proto2";

package lcs.push;

import "lcs_common.proto";

// push服务向Gateway发送的push消息
message Message 
{
    enum Type
    {
        kBroadcast = 0;
        kMulticast = 1;
        kUnicast   = 2;
    }

    required bytes message          = 1;
    required Type     type          = 2;
    repeated Channel.ClientID cids  = 3; 
    required uint64 taskid          = 4;
    repeated Zone   mid_zones       = 5;
    optional Gray   mid_gray        = 6;
}

message Response 
{
    optional uint64 taskid = 1;
    optional uint64 total = 2;
    optional uint64 complete = 3;
    optional uint64 failed = 4;
    optional uint64 timeout = 5;
    optional Report report = 6;
}

//gateway 向push上报的信息
message Report {
    repeated UserInfo user_infos = 1;
}
message UserInfo {
    optional string mid = 1;
    optional uint64 taskid = 4;
}
